--- a/ALICE_RAA_kratke.ipynb
+++ b/ALICE_RAA_kratke.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "49c3d3aa",
    "metadata": {},
    "source": [
     "# Masterclasses Analýza dát\n",
     "\n",
-    "Vitajte pri skátenej verzii výpočtu R_{AA}! \n",
+    "Vitajte pri skátenej verzii výpočtu $R_{AA}$! \n",
     "\n",
     "Najprv načítame balíčky potrebné pre analýzu dát.\""
    ]
@@ -14,6 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "3be5a17e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +26,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "148b8494",
    "metadata": {},
    "source": [
     "Teraz môžme načítať súbor obsahujúci údaje o zrážkach olovo-olovo\n",
@@ -34,6 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fd675b75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,18 +62,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-     "Teraz chceme prečítať informácie o centralitách a trackoch v špecifických intervaloch. Na to budeme používať for cykly a podmienku if.Postupujte v nasledjúcich krokoch."
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   "id": "f06e043b",
    "metadata": {},
    "source": [
     "# Úloha 1: \n",
     "\n",
     "## Počet trackov v danej centralite a hybnostnom intervale v Pb-Pb \n",
+    "\n",
+    "Teraz chceme prečítať informácie o centralitách a trackoch v špecifických intervaloch. Na to budeme používať for cykly a podmienku if.Postupujte v nasledjúcich krokoch:\n",
     "\n",
     "- Vytvorte dve premenné. Do jednej budete pripočítavať zrážky a do druhej tracky v jednotlijvých zrážkach \n",
     "\n",
@@ -95,6 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "580e997b",
    "metadata": {
     "solution2": "hidden",
     "solution2_first": true
@@ -104,6 +105,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a365cd22",
    "metadata": {},
    "source": [
     "# Úloha 1.1: \n",
@@ -113,18 +115,19 @@
     "- Vypočítajte priemerný počet trackov v jednej zrážke z premenných v predchádzajúcej bunke a uložte to do novej premennej\n",
     "\n",
     "- Nechajte túto hodnotu vypísať \n"
-
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d5fcca0d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "055b0cbd",
    "metadata": {},
    "source": [
     "# Úloha 2: \n",
@@ -144,14 +147,16 @@
    ]
   },
   {
-    "cell_type": "code",
-    "execution_count": null,
-    "metadata": {},
-    "outputs": [],
-    "source": []
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d423aa23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "0cf8c6ed",
    "metadata": {},
    "source": [
     "## Úloha 2.2: \n",
@@ -163,14 +168,16 @@
    ]
   },
   {
-    "cell_type": "code",
-    "execution_count": null,
-    "metadata": {},
-    "outputs": [],
-    "source": []
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ff8d539",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "fb46954d",
    "metadata": {},
    "source": [
     "# Úloha 2.3: \n",
@@ -180,18 +187,19 @@
     "- Vypočítajte priemerný počet trackov v jednej zrážke z premenných v predchádzajúcej bunke a uložte to do novej premennej (podobne ako pre Pb-Pb)\n",
     "\n",
     "- Nechajte túto hodnotu vypísať \n"
-
    ]
   },
   {
-    "cell_type": "code",
-    "execution_count": null,
-    "metadata": {},
-    "outputs": [],
-    "source": []
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f590547f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "c56a9f69",
    "metadata": {},
    "source": [
     "# Úloha 3: \n",
@@ -199,20 +207,20 @@
     "## Výpočet nukleárneho modifikačného faktora $R_{AA}$\n",
     "\n",
     "Na výpočet je potrebné poznať počet nukleónových kolízií pre danú centralitnú triedu, keďže nukleárny modifikačný faktor je definovaný ako:\n",
-    "\n",
-    "$R_{AA} = \frac{Y_{PbPb}} { N_{coll} Y_{pp} } $ \n",
-    "\n",
+    "<span style=\"font-family:Papyrus; font-size:2.5em;\">\n",
+    "<h1><center>$R_{AA} = \\frac{Y_{PbPb}} { N_{coll} Y_{pp} } $ </center></h1>\n",
+    "</span>\n",
     "Hodnoy $N_{coll}$ sú uvedené v nasledujúcej tabuľke. Použite hodnotu pre zadanú centralitnú triedu a počty trackov na jednu zrážku v PbPb a pp z úlohy 1.1 a 2.3 a vypočítajte $R_{AA}$ \n",
-    "\n",
-    "![Example Image](./NColl.png)"
+    "<center><img src=\"./NColl.png\"/></center>"
    ]
   },
   {
-    "cell_type": "code",
-    "execution_count": null,
-    "metadata": {},
-    "outputs": [],
-    "source": []
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a27a2457",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -231,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
