--- a/ALICE_RAA_python_uvod.ipynb
+++ b/ALICE_RAA_python_uvod.ipynb
@@ -150,7 +150,7 @@
     "    for i in range (0,15):\n",
     "        print(i**2)\n",
     "\n",
-    "Čo sa stalo? Čo robí 'range(0,15)'?"
+    "Čo sa stalo? Čo robí 'range(0,15)'? "
    ]
   },
   {
@@ -191,14 +191,25 @@
     "Pole je zoradenie premenných rovnakého typu, ktoré môže byť zavolané ako celok, alebo jednotlivé zložky samostatne. \n",
     "Pre zadanie polohy v rámci poľa sa začína počítať od 0. \n",
     "\n",
-    "Poloha sa zadáva v hranatej zátvorke. Príklad v nasledujúcej bunke:"
+    "Poloha sa zadáva v hranatej zátvorke. Počet prvkov v poli vieme zistiť pomocou funkcie len(). Príklad v nasledujúcej bunke:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 2, 3, 5, 8, 13, 21]\n",
+      "13\n",
+      "[1, 1, 2, 3, 5, 432, 13, 21]\n",
+      "Dlzka pola: 8\n"
+     ]
+    }
+   ],
    "source": [
     "pole = [1, 1, 2, 3, 5, 8, 13, 21]\n",
     "\n",
@@ -208,7 +219,8 @@
     "\n",
     "pole[5] = 432\n",
     "\n",
-    "print(pole)"
+    "print(pole)\n",
+    "print('Dlzka pola:', len(pole))"
    ]
   },
   {
@@ -393,7 +405,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -407,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
