zmena pola centralities

--- a/ALICE_RAA_kratke.ipynb
+++ b/ALICE_RAA_kratke.ipynb
@@ -41,17 +41,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Nasledujúce riadky načítajú dáta zo súboru. V prvom poli sú centrality a v druhom polia pričných hybností\n",
+    "# Nasledujúce riadky načítajú dáta zo súboru. V prvom poli sú centrality a v druhom polia priečných hybností\n",
     "centralities = pd.read_csv(\"data_PbPb.csv\", usecols=['centrality'])\n",
     "tracks = pd.read_csv(\"data_PbPb.csv\", usecols=['tracks'])\n",
     "\n",
     "# Vytvoríme prázdny zoznam pre tracky\n",
     "all_tracks_list = []\n",
+    "centralities_list = []\n",
     "\n",
     "for k in range(len(centralities)):\n",
     "    # Vymažeme zátvorky aby boli polia kompatibilné s Pythonom\n",
     "    alltracks = tracks.values[k][0].replace(\"[\", \"\").replace(\"]\", \"\")\n",
     "    temptrack = alltracks.split(\", \")\n",
+    "    centralities_list = centralities.values[k].replace(\"[\", \"\").replace(\"]\", \"\")\n",
     "\n",
     "    # Odfiltrujeme prázdne riadky\n",
     "    temptrack = [t for t in temptrack if t != '']\n",
@@ -71,9 +73,9 @@
     "\n",
     "Teraz chceme prečítať informácie o centralitách a trackoch v špecifických intervaloch. Na to budeme používať for cykly a podmienku if.Postupujte v nasledjúcich krokoch:\n",
     "\n",
-    "- Vytvorte dve premenné. Do jednej budete pripočítavať zrážky a do druhej tracky v jednotlijvých zrážkach \n",
+    "- Vytvorte dve premenné. Do jednej budete pripočítavať zrážky a do druhej tracky v jednotlivých zrážkach \n",
     "\n",
-    "- Vytvorte for cyklus idúci cez dĺžku poľa 'centralities' podbne ako v hornej bunke \n",
+    "- Vytvorte for cyklus idúci cez dĺžku poľa 'centralities_list' podbne ako v hornej bunke \n",
     "\n",
     "- Uložte hodnotu centrality do novej premennej \n",
     "\n",
@@ -83,7 +85,7 @@
     "\n",
     "   - Premennú na počet zrážok zvýšte o 1 \n",
     "\n",
-    "   - Vytvorte nový for cyklus, ktorý pôjde cez dĺžku poľa trackov v danoj zrážke (all_tracks_list[i]) \n",
+    "   - Vytvorte nový for cyklus, ktorý pôjde cez dĺžku poľa trackov v danej zrážke (all_tracks_list[i]) \n",
     "\n",
     "   - Do premennej track_pt uložte hybnosť častice ako float \n",
     "\n",
