--- a/ALICE_RAA_kratke.ipynb
+++ b/ALICE_RAA_kratke.ipynb
@@ -53,7 +53,8 @@
     "    # Vymažeme zátvorky aby boli polia kompatibilné s Pythonom\n",
     "    alltracks = tracks.values[k][0].replace(\"[\", \"\").replace(\"]\", \"\")\n",
     "    temptrack = alltracks.split(\", \")\n",
-    "    centralities_list = centralities.values[k].replace(\"[\", \"\").replace(\"]\", \"\")\n",
+    "    centrality = centralities.values[k][0]\n",
+    "    centralities_list.append(centrality)\n",
     "\n",
     "    # Odfiltrujeme prázdne riadky\n",
     "    temptrack = [t for t in temptrack if t != '']\n",
