--- a/ALICE_RAA_kratke_riesenia.ipynb
+++ b/ALICE_RAA_kratke_riesenia.ipynb
@@ -27,11 +27,14 @@
     "\n",
     "# Vytvoríme prázdny zoznam pre tracky\n",
     "all_tracks_list = []\n",
+    "centralities_list = []\n",
     "\n",
     "for k in range(len(centralities)):\n",
     "    # Vymažeme zátvorky aby boli polia kompatibilné s Pythonom\n",
     "    alltracks = tracks.values[k][0].replace(\"[\", \"\").replace(\"]\", \"\")\n",
     "    temptrack = alltracks.split(\", \")\n",
+    "    centrality = centralities.values[k][0]\n",
+    "    centralities_list.append(centrality)\n",
     "\n",
     "    # Odfiltrujeme prázdne riadky\n",
     "    temptrack = [t for t in temptrack if t != '']\n",
@@ -61,8 +64,8 @@
     "\n",
     "# TODO: Premenná 2 pre počet trackov\n",
     "\n",
-    "for i in range(len(centralities)):\n",
-    "    cent = centralities.values[i]\n",
+    "for i in range(len(centralities_list)):\n",
+    "    cent = centralities_list[i]\n",
     "    if 80 < cent < 100: #výber centralitnej triedy:    \n",
     "        print(\"hello\")    \n",
     "        # TODO: Zvýšte Premennú 1 (+1)\n",
@@ -98,8 +101,8 @@
     "n_events = 0\n",
     "n_tracks = 0\n",
     "\n",
-    "for i in range(len(centralities)):\n",
-    "    cent = centralities.values[i]\n",
+    "for i in range(len(centralities_list)):\n",
+    "    cent = centralities_list.values[i]\n",
     "    if 0 < cent < 10: \n",
     "        n_events = n_events + 1\n",
     "            \n",
@@ -152,11 +155,14 @@
     "\n",
     "# Initialize an empty list for the tracks\n",
     "all_tracks_list_pp = []\n",
+    "centralities_list_pp = []\n",
     "\n",
     "for k in range(len(centralities_pp)):\n",
     "    # Delete Brackets and make the Data compatible with python\n",
     "    alltracks = tracks_pp.values[k][0].replace(\"[\", \"\").replace(\"]\", \"\")\n",
     "    temptrack = alltracks.split(\", \")\n",
+    "    centrality=centralities_pp.values[k][0]\n",
+    "    centralities_list_pp.append(centrality)\n",
     "\n",
     "    # Filter out empty strings\n",
     "    temptrack = [t for t in temptrack if t != '']\n",
@@ -189,8 +195,8 @@
     "\n",
     "# This time we dont print out each track to save time and make it easier for us to read the Notebook.\n",
     "\n",
-    "for i in range(len(centralities_pp)):\n",
-    "    cent = centralities_pp.values[i]\n",
+    "for i in range(len(centralities_list_pp)):\n",
+    "    cent = centralities_pp[i]\n",
     "    if 0 < cent < 100: #select centralities:    \n",
     "         \n",
     "        n_events_pp = n_events_pp + 1\n",
@@ -204,49 +210,50 @@
     "                print(\"Transverse Momentum: \", track_pt) \n",
     "                n_tracks_pp = n_tracks_pp +1"
    ]
- },
- {
-  "cell_type": "markdown",
-  "id": "a187f4ed",
-  "metadata": {},
-  "source": [
-   "## Riešenie pre úlohu 2.3: \n",
-   "\n"
-  ]
- },
- {
-  "cell_type": "code",
-  "execution_count": null,
-  "id": "7271c33c",
-  "metadata": {},
-  "outputs": [],
-  "source": [
-   "pp_var = n_tracks_pp/n_events_pp \n",
-   "print(\"Tracks per Event: \", pp_var) \n"
-  ]
- },
- {
-  "cell_type": "markdown",
-  "metadata": {},
-  "source": [
-   "## Riešenie pre úlohu 3: \n",
-   "\n"
-  ]
- },
- {
-  "cell_type": "code",
-  "execution_count": null,
-  "id": "7271c33c",
-  "metadata": {},
-  "outputs": [],
-  "source": [
-   "print(\"R_AA: \", (pbpb_var)/(1600*pp_var)) \n"
-  ]
- }
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dae39d67",
+   "metadata": {},
+   "source": [
+    "## Riešenie pre úlohu 2.3: \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c66796e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pp_var = n_tracks_pp/n_events_pp \n",
+    "print(\"Tracks per Event: \", pp_var) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40fca68f",
+   "metadata": {},
+   "source": [
+    "## Riešenie pre úlohu 3: \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05806a3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"R_AA: \", (pbpb_var)/(1600*pp_var)) \n"
+   ]
+  }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -260,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
