--- a/ALICE_RAA_kratke_riesenia.ipynb
+++ b/ALICE_RAA_kratke_riesenia.ipynb
@@ -102,7 +102,7 @@
     "n_tracks = 0\n",
     "\n",
     "for i in range(len(centralities_list)):\n",
-    "    cent = centralities_list.values[i]\n",
+    "    cent = centralities_list[i]\n",
     "    if 0 < cent < 10: \n",
     "        n_events = n_events + 1\n",
     "            \n",
