--- a/ALICE_RAA_kratke_riesenia.ipynb
+++ b/ALICE_RAA_kratke_riesenia.ipynb
@@ -196,7 +196,7 @@
     "# This time we dont print out each track to save time and make it easier for us to read the Notebook.\n",
     "\n",
     "for i in range(len(centralities_list_pp)):\n",
-    "    cent = centralities_pp[i]\n",
+    "    cent = centralities_list_pp[i]\n",
     "    if 0 < cent < 100: #select centralities:    \n",
     "         \n",
     "        n_events_pp = n_events_pp + 1\n",
