--- a/ALICE_RAA_Vyhodnotenie.ipynb
+++ b/ALICE_RAA_Vyhodnotenie.ipynb
@@ -57,7 +57,7 @@
     "    plt.title(r\"R$_{\\rm AA}$ vs Centrality\")\n",
     "    plt.xlabel(\"Centrality [%]\")\n",
     "    plt.ylabel(r\"R$_{\\rm AA}$\")\n",
-    "    plt.ylim(0,1)\n",
+    "    plt.ylim(0,1.2)\n",
     "    plt.xlim(0,100)\n",
     "\n",
     "\n",
@@ -66,17 +66,25 @@
     "\n",
     "    #5.5 GeV/c\n",
     "    MakePointForCentAndPt(0., 5., 1,0.5 , 0, 0, \"A\")\n",
-    "    MakePointForCentAndPt(10., 20.,1,0.5, 0, 2, \"B\")\n",
-    "    MakePointForCentAndPt(30., 40.,1,0.5, 0, 4, \"C\")\n",
-    "    MakePointForCentAndPt(40., 50., 1,0.5, 0, 5, \"D\")\n",
-    "    MakePointForCentAndPt(70., 80., 1,0.5, 0, 6, \"E\")\n",
+    "    MakePointForCentAndPt(5., 10., 1,0.5 , 0, 1, \"B\")\n",
+    "    MakePointForCentAndPt(10., 20.,1,0.5, 0, 2, \"C\")\n",
+    "    MakePointForCentAndPt(20., 30.,1,0.5, 0, 3, \"D\")\n",
+    "    MakePointForCentAndPt(30., 40.,1,0.5, 0, 4, \"E\")\n",
+    "    MakePointForCentAndPt(40., 50., 1,0.5, 0, 5, \"F\")\n",
+    "    MakePointForCentAndPt(50., 60., 1,0.5, 0, 6, \"G\")\n",
+    "    MakePointForCentAndPt(60., 70., 1,0.5, 0, 7, \"H\")\n",
+    "    MakePointForCentAndPt(70., 80., 1,0.5, 0, 8, \"I\")\n",
     "\n",
     "    #10 GeV/c\n",
-    "    MakePointForCentAndPt(0., 5.,1,0.5, 1, 0, \"F\") \n",
-    "    MakePointForCentAndPt(10., 20.,1,0.5, 1, 2, \"G\")\n",
-    "    MakePointForCentAndPt(30., 40.,1 ,0.5, 1, 4, \"H\")\n",
-    "    MakePointForCentAndPt(40., 50.,1,0.5  , 1, 5, \"I\")\n",
-    "    MakePointForCentAndPt(70., 80.,1,0.5, 1, 6, \"J\")\n",
+    "    MakePointForCentAndPt(0., 5.,1,0.5, 1, 0, \"a\") \n",
+    "    MakePointForCentAndPt(5., 10.,1,0.5, 1, 0, \"b\") \n",
+    "    MakePointForCentAndPt(10., 20.,1,0.5, 1, 2, \"c\")\n",
+    "    MakePointForCentAndPt(20., 30.,1,0.5, 1, 2, \"d\")\n",
+    "    MakePointForCentAndPt(30., 40.,1 ,0.5, 1, 4, \"e\")\n",
+    "    MakePointForCentAndPt(40., 50.,1,0.5  , 1, 5, \"f\")\n",
+    "    MakePointForCentAndPt(50., 60.,1,0.5  , 1, 5, \"g\")\n",
+    "    MakePointForCentAndPt(60., 70.,1,0.5  , 1, 5, \"h\")\n",
+    "    MakePointForCentAndPt(70., 80.,1,0.5, 1, 6, \"i\")\n",
     "\n",
     "    DrawTotalPlot(True, drawALICEData)\n",
     "\n",
