nove cvicenie v uvode

--- a/ALICE_RAA_python_uvod.ipynb
+++ b/ALICE_RAA_python_uvod.ipynb
@@ -97,16 +97,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "solution2": "hidden",
-    "solution2_first": true
-   },
-   "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Cvičenie 3:\n",
@@ -123,6 +113,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "solution2": "hidden",
     "solution2_first": true
@@ -133,6 +130,36 @@
     "vstup2 = input(\"Zadajte vstup pomocou klávesnice a potvrďte s Enter: \")\n",
     "\n",
     "print(vstup1, vstup2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "solution2": "hidden",
+    "solution2_first": true
+   },
+   "source": [
+    "## Spájanie podmienok\n",
+    "\n",
+    "Niekedy je potrebné urobiť výber na základe dvoch podmienok. Napríklad ak chceme časť kódu vykonať iba ak je číslo x v intervale od 1 do 20, tak potrebujeme splniť x < 20 a zároveň x > 1. \n",
+    "\n",
+    "V takomto prípade môžme použiť logický operátor AND alebo interval. Príklad nájdete v nasledujúcej bunke. Skúste zmeniť hodnoty vstupu. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d=10\n",
+    "c=1\n",
+    "\n",
+    "if(d<20 and d>1):\n",
+    "    print (\"d splna obe podmienky\")\n",
+    "\n",
+    "if(3<c<5):\n",
+    "     print (\"c sa nachadza v intervale od 3 do 5\")\n"
    ]
   },
   {
@@ -241,6 +268,22 @@
    "metadata": {},
    "source": [
     "## Cvičenie 6:\n",
+    "\n",
+    "Definujte pole ľubovoľnej dĺžky a urobte cyklus, ktorý prechádza cez všetky elementy v ňom. Ak je element v intervale od 2 do 10 pripočítakte k nemu 5. Na konci nechajte celé pole vypísať."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cvičenie 7 (nepovinné):\n",
     "\n",
     "- Zadefinujte pole 'dni' pre všetky dni v týždni \n",
     "- Čo sa stane po zadaní nasledujúcich príkazov?:\n",
