--- a/ALICE_RAA_python_uvod_risenia.ipynb
+++ b/ALICE_RAA_python_uvod_risenia.ipynb
@@ -168,7 +168,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Riešenie Cvičenie 6:\n"
+    "## Riešenie Cvičenie 6:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "novePole =[2,60,36,78,1,37,91,1.4,3.3,5.2]\n",
+    "for i in range (len(novePole)):\n",
+    "    if(2<novePole[i]<10):\n",
+    "        novePole[i]+=1\n",
+    "print(novePole)        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Riešenie Cvičenie 7:\n"
    ]
   },
   {
