--- a/ALICE_RAA_FullySolved.ipynb
+++ b/ALICE_RAA_FullySolved.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "listCentralities = [(0,5),(5,10),(10,20),(20,30),(30,40),(40,50),(50,60),(60,70),(70,80)]"
+    "listCentralities = [(0,5),(5,10),(10,20),(30,40),(50,60),(70,80)]"
    ]
   },
   {
@@ -277,11 +277,8 @@
     "hTPC_0_5, bins = at.create_event_histos(df_events[df_events['0-5'] == True]['eventMult'])\n",
     "hTPC_5_10, bins = at.create_event_histos(df_events[df_events['5-10'] == True]['eventMult'])\n",
     "hTPC_10_20, bins = at.create_event_histos(df_events[df_events['10-20'] == True]['eventMult'])\n",
-    "hTPC_20_30, bins = at.create_event_histos(df_events[df_events['20-30'] == True]['eventMult'])\n",
     "hTPC_30_40, bins = at.create_event_histos(df_events[df_events['30-40'] == True]['eventMult'])\n",
-    "hTPC_40_50, bins = at.create_event_histos(df_events[df_events['40-50'] == True]['eventMult'])\n",
     "hTPC_50_60, bins = at.create_event_histos(df_events[df_events['50-60'] == True]['eventMult'])\n",
-    "hTPC_60_70, bins = at.create_event_histos(df_events[df_events['60-70'] == True]['eventMult'])\n",
     "hTPC_70_80, bins = at.create_event_histos(df_events[df_events['70-80'] == True]['eventMult'])"
    ]
   },
@@ -295,11 +292,8 @@
     "hTPC_0_5_err = np.sqrt(hTPC_0_5)\n",
     "hTPC_5_10_err = np.sqrt(hTPC_5_10)\n",
     "hTPC_10_20_err = np.sqrt(hTPC_10_20)\n",
-    "hTPC_20_30_err = np.sqrt(hTPC_20_30)\n",
     "hTPC_30_40_err = np.sqrt(hTPC_30_40)\n",
-    "hTPC_40_50_err = np.sqrt(hTPC_40_50)\n",
     "hTPC_50_60_err = np.sqrt(hTPC_50_60)\n",
-    "hTPC_60_70_err = np.sqrt(hTPC_60_70)\n",
     "hTPC_70_80_err = np.sqrt(hTPC_70_80)"
    ]
   },
@@ -324,11 +318,8 @@
     "plt.errorbar(bins[:-1], hTPC_0_5, yerr=hTPC_0_5_err, marker='+', c='darkred', label='0-5%')\n",
     "plt.errorbar(bins[:-1], hTPC_5_10, yerr=hTPC_5_10_err, marker='+', c='red', label='5-10%')\n",
     "plt.errorbar(bins[:-1], hTPC_10_20, yerr=hTPC_10_20_err, marker='+', c='darkorange', label='10-20%')\n",
-    "plt.errorbar(bins[:-1], hTPC_20_30, yerr=hTPC_20_30_err, marker='+', c='gold', label='20-30%')\n",
     "plt.errorbar(bins[:-1], hTPC_30_40, yerr=hTPC_30_40_err, marker='+', c='yellowgreen', label='30-40%')\n",
-    "plt.errorbar(bins[:-1], hTPC_40_50, yerr=hTPC_40_50_err, marker='+', c='mediumturquoise', label='40-50%')\n",
     "plt.errorbar(bins[:-1], hTPC_50_60, yerr=hTPC_50_60_err,  marker='+', c='deepskyblue', label='50-60%')\n",
-    "plt.errorbar(bins[:-1], hTPC_60_70, yerr=hTPC_60_70_err, marker='+', c='royalblue', label='60-70%')\n",
     "plt.errorbar(bins[:-1], hTPC_70_80, yerr=hTPC_70_80_err, marker='+', c='navy', label='70-80%')\n",
     "#pre zoznam možných nastavení 'fmt' pozrite stránku:\n",
     "#https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.pyplot.plot.html#matplotlib.pyplot.plot\n",
@@ -499,30 +490,15 @@
     "hPbPb_10_20 = hPbPb_10_20 / binWidth\n",
     "hPbPb_10_20 = hPbPb_10_20 / dictEventsCent['10-20']\n",
     "\n",
-    "hPbPb_20_30, _ = np.histogram(dictMomCent['20-30'], binsPt)\n",
-    "hPbPb_20_30_err = np.sqrt(hPbPb_20_30) / dictEventsCent['20-30']\n",
-    "hPbPb_20_30 = hPbPb_20_30 / binWidth\n",
-    "hPbPb_20_30 = hPbPb_20_30 / dictEventsCent['20-30']\n",
-    "\n",
     "hPbPb_30_40, _ = np.histogram(dictMomCent['30-40'], binsPt)\n",
     "hPbPb_30_40_err = np.sqrt(hPbPb_70_80) / dictEventsCent['30-40']\n",
     "hPbPb_30_40 = hPbPb_30_40 / binWidth\n",
     "hPbPb_30_40 = hPbPb_30_40 / dictEventsCent['30-40']\n",
     "\n",
-    "hPbPb_40_50, _ = np.histogram(dictMomCent['40-50'], binsPt)\n",
-    "hPbPb_40_50_err = np.sqrt(hPbPb_40_50) / dictEventsCent['40-50']\n",
-    "hPbPb_40_50 = hPbPb_40_50 / binWidth\n",
-    "hPbPb_40_50 = hPbPb_40_50 / dictEventsCent['40-50']\n",
-    "\n",
     "hPbPb_50_60, _ = np.histogram(dictMomCent['50-60'], binsPt)\n",
     "hPbPb_50_60_err = np.sqrt(hPbPb_50_60) / dictEventsCent['50-60']\n",
     "hPbPb_50_60 = hPbPb_50_60 / binWidth\n",
     "hPbPb_50_60 = hPbPb_50_60 / dictEventsCent['50-60']\n",
-    "\n",
-    "hPbPb_60_70, _ = np.histogram(dictMomCent['60-70'], binsPt)\n",
-    "hPbPb_60_70_err = np.sqrt(hPbPb_60_70) / dictEventsCent['60-70']\n",
-    "hPbPb_60_70 = hPbPb_60_70 / binWidth\n",
-    "hPbPb_60_70 = hPbPb_60_70 / dictEventsCent['10-20']\n",
     "\n",
     "hPbPb_70_80, _ = np.histogram(dictMomCent['70-80'], binsPt)\n",
     "hPbPb_70_80_err = np.sqrt(hPbPb_70_80) / dictEventsCent['70-80']\n",
@@ -564,11 +540,8 @@
     "plt.errorbar(binsPt[:-1], hPbPb_0_5, xerr=x_bin_width, yerr=hPbPb_0_5_err, marker='+', c='darkred', label='0-5%')\n",
     "plt.errorbar(binsPt[:-1], hPbPb_5_10, xerr=x_bin_width, yerr=hPbPb_5_10_err, marker='+', c='red', label='5-10%')\n",
     "plt.errorbar(binsPt[:-1], hPbPb_10_20, xerr=x_bin_width, yerr=hPbPb_10_20_err, marker='+', c='darkorange', label='10-20%')\n",
-    "plt.errorbar(binsPt[:-1], hPbPb_20_30, xerr=x_bin_width, yerr=hPbPb_20_30_err, marker='+', c='gold', label='20-30%')\n",
     "plt.errorbar(binsPt[:-1], hPbPb_30_40, xerr=x_bin_width, yerr=hPbPb_30_40_err, marker='+', c='yellowgreen', label='30-40%')\n",
-    "plt.errorbar(binsPt[:-1], hPbPb_40_50, xerr=x_bin_width, yerr=hPbPb_40_50_err, marker='+', c='mediumturquoise', label='40-50%')\n",
     "plt.errorbar(binsPt[:-1], hPbPb_50_60, xerr=x_bin_width, yerr=hPbPb_50_60_err, marker='+', c='deepskyblue', label='50-60%')\n",
-    "plt.errorbar(binsPt[:-1], hPbPb_60_70, xerr=x_bin_width, yerr=hPbPb_60_70_err, marker='+', c='royalblue', label='60-70%')\n",
     "plt.errorbar(binsPt[:-1], hPbPb_70_80, xerr=x_bin_width, yerr=hPbPb_70_80_err, marker='+', c='navy', label='70-80%')\n",
     "plt.errorbar(binsPt[:-1], pp,          xerr=x_bin_width, yerr=pp_err,          marker='+', c='black', label='pp')\n",
     "\n",
@@ -636,11 +609,8 @@
     "RAA_0_5 = np.divide(hPbPb_0_5 / dictNColl['0-5'], pp)\n",
     "RAA_5_10 = np.divide(hPbPb_5_10 / dictNColl['5-10'], pp)\n",
     "RAA_10_20 = np.divide(hPbPb_10_20 / dictNColl['10-80'], pp)\n",
-    "RAA_20_30 = np.divide(hPbPb_20_30 / dictNColl['20-30'], pp)\n",
     "RAA_30_40 = np.divide(hPbPb_30_40 / dictNColl['30-40'], pp)\n",
-    "RAA_40_50 = np.divide(hPbPb_40_50 / dictNColl['40-50'], pp)\n",
     "RAA_50_60 = np.divide(hPbPb_50_60 / dictNColl['50-60'], pp)\n",
-    "RAA_60_70 = np.divide(hPbPb_60_70 / dictNColl['60-70'], pp)\n",
     "RAA_70_80 = np.divide(hPbPb_70_80 / dictNColl['70-80'], pp)"
    ]
   },
@@ -653,11 +623,8 @@
     "RAA_0_5_err = at.uncertaintyCalculation(hPbPb_0_5, hPbPb_0_5_err, dictNColl['0-5'], pp, pp_err, dictNColl['pp'])\n",
     "RAA_5_10_err = at.uncertaintyCalculation(hPbPb_5_10, hPbPb_5_10_err, dictNColl['5-10'], pp, pp_err, dictNColl['pp'])\n",
     "RAA_10_20_err = at.uncertaintyCalculation(hPbPb_10_20, hPbPb_10_20_err, dictNColl['10-20'], pp, pp_err, dictNColl['pp'])\n",
-    "RAA_20_30_err = at.uncertaintyCalculation(hPbPb_20_30, hPbPb_20_30_err, dictNColl['20-30'], pp, pp_err, dictNColl['pp'])\n",
     "RAA_30_40_err = at.uncertaintyCalculation(hPbPb_30_40, hPbPb_30_40_err, dictNColl['30-40'], pp, pp_err, dictNColl['pp'])\n",
-    "RAA_40_50_err = at.uncertaintyCalculation(hPbPb_40_50, hPbPb_40_50_err, dictNColl['40-50'], pp, pp_err, dictNColl['pp'])\n",
     "RAA_50_60_err = at.uncertaintyCalculation(hPbPb_50_60, hPbPb_50_60_err, dictNColl['50-60'], pp, pp_err, dictNColl['pp'])\n",
-    "RAA_60_70_err = at.uncertaintyCalculation(hPbPb_60_70, hPbPb_60_70_err, dictNColl['60-70'], pp, pp_err, dictNColl['pp'])\n",
     "RAA_70_80_err = at.uncertaintyCalculation(hPbPb_70_80, hPbPb_70_80_err, dictNColl['70-80'], pp, pp_err, dictNColl['pp'])"
    ]
   },
@@ -670,11 +637,8 @@
     "plt.errorbar(binsPt[:-1], RAA_0_5, xerr=x_bin_width, yerr=RAA_0_5_err, marker='+', c='darkred', label='0-5%')\n",
     "plt.errorbar(binsPt[:-1], RAA_5_10, xerr=x_bin_width, yerr=RAA_5_10_err, marker='+', c='red', label='5-10%')\n",
     "plt.errorbar(binsPt[:-1], RAA_10_20, xerr=x_bin_width, yerr=RAA_10_20_err, marker='+', c='darkorange', label='10-20%')\n",
-    "plt.errorbar(binsPt[:-1], RAA_20_30, xerr=x_bin_width, yerr=RAA_20_30_err, marker='+', c='gold', label='20-30%')\n",
     "plt.errorbar(binsPt[:-1], RAA_30_40, xerr=x_bin_width, yerr=RAA_30_40_err, marker='+', c='yellowgreen', label='30-40%')\n",
-    "plt.errorbar(binsPt[:-1], RAA_40_50, xerr=x_bin_width, yerr=RAA_40_50_err, marker='+', c='mediumturquoise', label='40-50%')\n",
     "plt.errorbar(binsPt[:-1], RAA_50_60, xerr=x_bin_width, yerr=RAA_50_60_err, marker='+', c='deepskyblue', label='50-60%')\n",
-    "plt.errorbar(binsPt[:-1], RAA_60_70, xerr=x_bin_width, yerr=RAA_60_70_err, marker='+', c='royalblue', label='60-70%')\n",
     "plt.errorbar(binsPt[:-1], RAA_70_80, xerr=x_bin_width, yerr=RAA_70_80_err, marker='+', c='navy, label='70-80%')\n",
     "\n",
     "plt.ylim(0.01,1.2)\n",
