--- a/ALICE_RAA_FullySolved.ipynb
+++ b/ALICE_RAA_FullySolved.ipynb
@@ -382,7 +382,7 @@
     "hPbPb_10_20 = hPbPb_10_20 / dictEventsCent['10-20']\n",
     "\n",
     "hPbPb_30_40, _ = np.histogram(dictMomCent['30-40'], binsPt)\n",
-    "hPbPb_30_40_err = np.sqrt(hPbPb_70_80) / dictEventsCent['30-40']\n",
+    "hPbPb_30_40_err = np.sqrt(hPbPb_30_40) / dictEventsCent['30-40']\n",
     "hPbPb_30_40 = hPbPb_30_40 / binWidth\n",
     "hPbPb_30_40 = hPbPb_30_40 / dictEventsCent['30-40']\n",
     "\n",
@@ -499,7 +499,7 @@
    "source": [
     "RAA_0_5 = np.divide(hPbPb_0_5 / dictNColl['0-5'], pp)\n",
     "RAA_5_10 = np.divide(hPbPb_5_10 / dictNColl['5-10'], pp)\n",
-    "RAA_10_20 = np.divide(hPbPb_10_20 / dictNColl['10-80'], pp)\n",
+    "RAA_10_20 = np.divide(hPbPb_10_20 / dictNColl['10-20'], pp)\n",
     "RAA_30_40 = np.divide(hPbPb_30_40 / dictNColl['30-40'], pp)\n",
     "RAA_50_60 = np.divide(hPbPb_50_60 / dictNColl['50-60'], pp)\n",
     "RAA_70_80 = np.divide(hPbPb_70_80 / dictNColl['70-80'], pp)"
@@ -530,7 +530,7 @@
     "plt.errorbar(binsPt[:-1], RAA_10_20, xerr=x_bin_width, yerr=RAA_10_20_err, marker='+', c='darkorange', label='10-20%')\n",
     "plt.errorbar(binsPt[:-1], RAA_30_40, xerr=x_bin_width, yerr=RAA_30_40_err, marker='+', c='yellowgreen', label='30-40%')\n",
     "plt.errorbar(binsPt[:-1], RAA_50_60, xerr=x_bin_width, yerr=RAA_50_60_err, marker='+', c='deepskyblue', label='50-60%')\n",
-    "plt.errorbar(binsPt[:-1], RAA_70_80, xerr=x_bin_width, yerr=RAA_70_80_err, marker='+', c='navy, label='70-80%')\n",
+    "plt.errorbar(binsPt[:-1], RAA_70_80, xerr=x_bin_width, yerr=RAA_70_80_err, marker='+', c='navy', label='70-80%')\n",
     "\n",
     "plt.ylim(0.01,1.2)\n",
     "plt.xlabel('$p_{T}$')\n",
