--- a/ALICE_RAA_python_uvod.ipynb
+++ b/ALICE_RAA_python_uvod.ipynb
@@ -113,13 +113,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "solution2": "hidden",
     "solution2_first": true
@@ -218,7 +211,7 @@
     "Pole je zoradenie premenných rovnakého typu, ktoré môže byť zavolané ako celok, alebo jednotlivé zložky samostatne. \n",
     "Pre zadanie polohy v rámci poľa sa začína počítať od 0. \n",
     "\n",
-    "Poloha sa zadáva v hranatej zátvorke. Počet prvkov v poli vieme zistiť pomocou funkcie len(). Príklad v nasledujúcej bunke:"
+    "Zložky poľa sa zadávajú v hranatej zátvorke. Počet prvkov v poli vieme zistiť pomocou funkcie len(). Príklad v nasledujúcej bunke:"
    ]
   },
   {
@@ -269,7 +262,7 @@
    "source": [
     "## Cvičenie 6:\n",
     "\n",
-    "Definujte pole ľubovoľnej dĺžky a urobte cyklus, ktorý prechádza cez všetky elementy v ňom. Ak je element v intervale od 2 do 10 pripočítakte k nemu 5. Na konci nechajte celé pole vypísať."
+    "Definujte pole ľubovoľnej dĺžky a urobte cyklus, ktorý prechádza cez všetky elementy v ňom. Ak je element v intervale od 2 do 10 pripočítajte k nemu 5. Na konci nechajte celé pole vypísať."
    ]
   },
   {
@@ -426,13 +419,6 @@
     "plt.ylabel(\"Početnosť\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
