--- a/ALICE_RAA_kratke.ipynb
+++ b/ALICE_RAA_kratke.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Vitajte pri skátenej verzii výpočtu $R_{AA}$! \n",
     "\n",
-    "Najprv načítame balíčky potrebné pre analýzu dát.\""
+    "Najprv načítame balíčky potrebné pre analýzu dát."
    ]
   },
   {
@@ -29,9 +29,15 @@
    "id": "148b8494",
    "metadata": {},
    "source": [
-    "Teraz môžme načítať súbor obsahujúci údaje o zrážkach olovo-olovo\n",
+    "Teraz môžeme načítať súbor obsahujúci údaje o zrážkach olovo-olovo\n",
     " \n",
-    "Štandardne sa dáta analyzujú vo frejmvorku root a sú uložené v súboroch s príponou .root. Dnes sú pre vás dáta predpripravené v tabuľke s troma sĺpcami. Prvý je id zrážky, druhý obsahuje pole priečných hybností častíc vzniknutých v danej zrážke a tretí je centralita zrážky."
+    "Štandardne sa dáta analyzujú vo frameworku root a sú uložené v súboroch s príponou .root. Dnes sú pre vás dáta predpripravené v tabuľke s troma sĺpcami. Prvý je identifikačné čislo zrážky, druhý obsahuje pole priečnych hybností častíc vzniknutých v danej zrážke a tretí je centralita zrážky.\n",
+    "\n",
+    "Príklad dvoch riadkov:\n",
+    "\n",
+    "0,\"[0.351597398519516, 0.3900143802165985, 0.3029259443283081, 1.0096677541732788, 1.2998042106628418, 1.0053801536560059, 0.33100253343582153, 0.5540841817855835, 1.0337899923324585, 0.2619117200374603, 2.159311532974243, 0.1304410696029663, 0.7834312319755554]\",36.5 \n",
+    "\n",
+    "1,\"[0.3173491954803467, 0.933304488658905, 0.3336208462715149, 0.27811750769615173, 0.3800622820854187, 0.23552605509757996]\",65.5"
    ]
   },
   {
@@ -72,11 +78,11 @@
     "\n",
     "## Počet trackov v danej centralite a hybnostnom intervale v Pb-Pb \n",
     "\n",
-    "Teraz chceme prečítať informácie o centralitách a trackoch v špecifických intervaloch. Na to budeme používať for cykly a podmienku if.Postupujte v nasledjúcich krokoch:\n",
+    "Teraz chceme prečítať informácie o centralitách a trackoch v špecifických intervaloch. Na to budeme používať for cykly a podmienku if. Postupujte v nasledujúcich krokoch (Ak by ste potrebovali pomôcť, v riešeniach je aj čiastočné riešenie):\n",
     "\n",
-    "- Vytvorte dve premenné. Do jednej budete pripočítavať zrážky a do druhej tracky v jednotlivých zrážkach \n",
+    "- Vytvorte dve premenné. Do jednej budete pripočítavať počet zrážok a do druhej počet dráh v jednotlivých zrážkach \n",
     "\n",
-    "- Vytvorte for cyklus idúci cez dĺžku poľa 'centralities_list' podbne ako v hornej bunke \n",
+    "- Vytvorte for cyklus idúci cez dĺžku poľa 'centralities_list' podobne ako v hornej bunke \n",
     "\n",
     "- Uložte hodnotu centrality do novej premennej \n",
     "\n",
@@ -88,7 +94,7 @@
     "\n",
     "   - Vytvorte nový for cyklus, ktorý pôjde cez dĺžku poľa trackov v danej zrážke (all_tracks_list[i]) \n",
     "\n",
-    "   - Do premennej track_pt uložte hybnosť častice ako float \n",
+    "   - Do premennej track_pt uložte hybnosť častice ako float (použite kód float(all_tracks_list[i][l]))\n",
     "\n",
     "   - Pomocou podmienky if skontrolujte, či sa táto hybnosť nachádza v zadanom intervale \n",
     "\n",
@@ -113,9 +119,9 @@
    "source": [
     "# Úloha 1.1: \n",
     "\n",
-    "## Priemerný počet trackov v danej centralite a hybnostnom intervale v Pb-Pb v jednej zrážke\n",
+    "## Priemerný počet dráh v danej centralite a hybnostnom intervale v Pb-Pb v jednej zrážke\n",
     "\n",
-    "- Vypočítajte priemerný počet trackov v jednej zrážke z premenných v predchádzajúcej bunke a uložte to do novej premennej\n",
+    "- Vypočítajte priemerný počet dráh v jednej zrážke z premenných v predchádzajúcej bunke a uložte to do novej premennej\n",
     "\n",
     "- Nechajte túto hodnotu vypísať \n"
    ]
@@ -135,7 +141,7 @@
    "source": [
     "# Úloha 2: \n",
     "\n",
-    "## Počet trackov v danom hybnostnom intervale v pp \n",
+    "## Počet dráh v danom hybnostnom intervale v pp \n",
     "\n",
     "- Zopakujeme veľmi podobný postup ako pre Pb-Pb, kód môžte kopírovať a meniť \n",
     "\n",
@@ -143,9 +149,9 @@
     "\n",
     "- Načítajte dáta pre zrážky pp zo súboru data_pp.csv \n",
     "\n",
-    "- Vytvorte polia centralities_pp a all_tracks_list_pp \n",
+    "- Vytvorte polia centralities_list_pp a all_tracks_list_pp \n",
     "\n",
-    "- Pomocou for cyklu cez centralities_pp pridajte zoznamy trackov do all_tracks_list_pp (rovnaký kód ako pr Pb-Pb)\n",
+    "- Pomocou for cyklu cez centralities_pp pridajte zoznamy trackov do  centralities_list_pp a all_tracks_list_pp (rovnaký kód ako pr Pb-Pb)\n",
     "\n"
    ]
   },
@@ -185,9 +191,9 @@
    "source": [
     "# Úloha 2.3: \n",
     "\n",
-    "## Priemerný počet trackov v danom hybnostnom intervale v pp v jednej zrážke\n",
+    "## Priemerný počet dráh v danom hybnostnom intervale v pp v jednej zrážke\n",
     "\n",
-    "- Vypočítajte priemerný počet trackov v jednej zrážke z premenných v predchádzajúcej bunke a uložte to do novej premennej (podobne ako pre Pb-Pb)\n",
+    "- Vypočítajte priemerný počet dráh v jednej zrážke z premenných v predchádzajúcej bunke a uložte to do novej premennej (podobne ako pre Pb-Pb)\n",
     "\n",
     "- Nechajte túto hodnotu vypísať \n"
    ]
@@ -209,11 +215,11 @@
     "\n",
     "## Výpočet nukleárneho modifikačného faktora $R_{AA}$\n",
     "\n",
-    "Na výpočet je potrebné poznať počet nukleónových kolízií pre danú centralitnú triedu, keďže nukleárny modifikačný faktor je definovaný ako:\n",
+    "Na výpočet je potrebné poznať počet zrážok nukleón-nukleón pre danú centralitnú triedu (Ncoll), keďže nukleárny modifikačný faktor je definovaný ako:\n",
     "<span style=\"font-family:Papyrus; font-size:2.5em;\">\n",
     "<h1><center>$R_{AA} = \\frac{Y_{PbPb}} { N_{coll} Y_{pp} } $ </center></h1>\n",
     "</span>\n",
-    "Hodnoy $N_{coll}$ sú uvedené v nasledujúcej tabuľke. Použite hodnotu pre zadanú centralitnú triedu a počty trackov na jednu zrážku v PbPb a pp z úlohy 1.1 a 2.3 a vypočítajte $R_{AA}$ \n",
+    "kde, $Y_{PbPb}$ môžeme nahradiť priemerným počtom dráh v zrážkach Pb-Pb a $Y_{pp}$ môžeme nahradiť priemerným počtom dráh v zrážkach pp. Hodnoty $N_{coll}$ sú uvedené v nasledujúcej tabuľke. Použite hodnotu pre zadanú centralitnú triedu a počty dráh na jednu zrážku v PbPb a pp z úlohy 1.1 a 2.3 a vypočítajte $R_{AA}$ \n",
     "<center><img src=\"./NColl.png\"/></center>"
    ]
   },
