adjustment for 16 groups

--- a/ALICE_RAA_Vyhodnotenie.ipynb
+++ b/ALICE_RAA_Vyhodnotenie.ipynb
@@ -31,19 +31,19 @@
     "from IPython.display import display, FileLink\n",
     "\n",
     "\n",
-    "iNumberOfGroups = 9\n",
-    "iNumberOfPt = 2\n",
+    "iNumberOfGroups = 16\n",
+    "iNumberOfPt = 4\n",
     "pointsraw = np.zeros((iNumberOfGroups, iNumberOfPt, 4))\n",
     "made_Groups = np.zeros((iNumberOfGroups, iNumberOfPt))\n",
     "legendNames = np.empty((iNumberOfGroups, iNumberOfPt), dtype=object)\n",
     "\n",
-    "bin_edges = np.array([0.0, 5.0, 10.0, 20.0, 30.0, 40.0, 50.0, 60.0, 70.0, 80.0])\n",
+    "bin_edges = np.array([0.0, 5.0, 10.0, 30.0, 50.0])\n",
     "markerSize = 4\n",
     "markerlinewidth = 1\n",
     "linewidth = 1\n",
     "\n",
     "colors = []\n",
-    "for i in range(10):\n",
+    "for i in range(4):\n",
     "    colors.append([plt.cm.tab20(i*2), plt.cm.tab20(i*2+1)])\n",
     "\n",
     "def PlotModeration(drawALICEData=True):\n",
@@ -65,26 +65,27 @@
     "    # Syntax: (centrality lower edge, centrality upper edge, RAA, RAA uncertainty, 0=lowPT 1=highPT, group index, group name)\n",
     "\n",
     "    #5.5 GeV/c\n",
-    "    MakePointForCentAndPt(0., 5., 1,0.5 , 0, 0, \"A\")\n",
-    "    MakePointForCentAndPt(5., 10., 1,0.5 , 0, 1, \"B\")\n",
-    "    MakePointForCentAndPt(10., 20.,1,0.5, 0, 2, \"C\")\n",
-    "    MakePointForCentAndPt(20., 30.,1,0.5, 0, 3, \"D\")\n",
-    "    MakePointForCentAndPt(30., 40.,1,0.5, 0, 4, \"E\")\n",
-    "    MakePointForCentAndPt(40., 50., 1,0.5, 0, 5, \"F\")\n",
-    "    MakePointForCentAndPt(50., 60., 1,0.5, 0, 6, \"G\")\n",
-    "    MakePointForCentAndPt(60., 70., 1,0.5, 0, 7, \"H\")\n",
-    "    MakePointForCentAndPt(70., 80., 1,0.5, 0, 8, \"I\")\n",
+    "    MakePointForCentAndPt(0., 5., 1,0.5 , 0, 0, \"5-6 GeV/c\")\n",
+    "    MakePointForCentAndPt(5., 10., 1,0.5 , 0, 1, \"5-6 GeV/c\")\n",
+    "    MakePointForCentAndPt(10., 30.,1,0.5, 0, 2, \"5-6 GeV/c\")\n",
+    "    MakePointForCentAndPt(30., 50.,1,0.5, 0, 3, \"5-6 GeV/c\")\n",
     "\n",
-    "    #10 GeV/c\n",
-    "    MakePointForCentAndPt(0., 5.,1,0.5, 1, 0, \"a\") \n",
-    "    MakePointForCentAndPt(5., 10.,1,0.5, 1, 0, \"b\") \n",
-    "    MakePointForCentAndPt(10., 20.,1,0.5, 1, 2, \"c\")\n",
-    "    MakePointForCentAndPt(20., 30.,1,0.5, 1, 2, \"d\")\n",
-    "    MakePointForCentAndPt(30., 40.,1 ,0.5, 1, 4, \"e\")\n",
-    "    MakePointForCentAndPt(40., 50.,1,0.5  , 1, 5, \"f\")\n",
-    "    MakePointForCentAndPt(50., 60.,1,0.5  , 1, 5, \"g\")\n",
-    "    MakePointForCentAndPt(60., 70.,1,0.5  , 1, 5, \"h\")\n",
-    "    MakePointForCentAndPt(70., 80.,1,0.5, 1, 6, \"i\")\n",
+    "    #6.5 GeV/c\n",
+    "    MakePointForCentAndPt(0., 5.,1,0.5, 0, 4, \"6-7 GeV/c\")\n",
+    "    MakePointForCentAndPt(5., 10., 1,0.5, 0, 5, \"6-7 GeV/c\")\n",
+    "    MakePointForCentAndPt(10., 20., 1,0.5, 0, 6, \"6-7 GeV/c\")\n",
+    "    MakePointForCentAndPt(20., 50., 1,0.5, 0, 7, \"6-7 GeV/c\")\n",
+    "\n",
+    "    #8 GeV/c\n",
+    "    MakePointForCentAndPt(0., 5.,1,0.5, 1, 0, \"7-9 GeV/c\") \n",
+    "    MakePointForCentAndPt(5., 10.,1,0.5, 1, 0, \"7-9 GeV/c\") \n",
+    "    MakePointForCentAndPt(10., 20.,1,0.5, 1, 2, \"7-9 GeV/c\")\n",
+    "    MakePointForCentAndPt(20., 30.,1,0.5, 1, 2, \"7-9 GeV/c\")\n",
+    "\n",
+    "    MakePointForCentAndPt(0., 5.,1 ,0.5, 1, 4, \"9-12 GeV/c\")\n",
+    "    MakePointForCentAndPt(5., 10.,1,0.5  , 1, 5, \"9-12 GeV/c\")\n",
+    "    MakePointForCentAndPt(10., 30.,1,0.5  , 1, 5, \"9-12 GeV/c\")\n",
+    "    MakePointForCentAndPt(30., 50.,1,0.5  , 1, 5, \"9-12 GeV/c\")\n",
     "\n",
     "    DrawTotalPlot(True, drawALICEData)\n",
     "\n",
