--- a/ALICE_RAA_kratke.ipynb
+++ b/ALICE_RAA_kratke.ipynb
@@ -219,8 +219,23 @@
     "<span style=\"font-family:Papyrus; font-size:2.5em;\">\n",
     "<h1><center>$R_{AA} = \\frac{Y_{PbPb}} { N_{coll} Y_{pp} } $ </center></h1>\n",
     "</span>\n",
-    "kde, $Y_{PbPb}$ môžeme nahradiť priemerným počtom dráh v zrážkach Pb-Pb a $Y_{pp}$ môžeme nahradiť priemerným počtom dráh v zrážkach pp. Hodnoty $N_{coll}$ sú uvedené v nasledujúcej tabuľke. Použite hodnotu pre zadanú centralitnú triedu a počty dráh na jednu zrážku v PbPb a pp z úlohy 1.1 a 2.3 a vypočítajte $R_{AA}$ \n",
-    "<center><img src=\"./NColl.png\"/></center>"
+    "kde, $Y_{PbPb}$ môžeme nahradiť priemerným počtom dráh v zrážkach Pb-Pb a $Y_{pp}$ môžeme nahradiť priemerným počtom dráh v zrážkach pp. Hodnoty $N_{coll}$ sú uvedené v zozname v nasledujúcej bunke. Použite hodnotu pre zadanú centralitnú triedu a počty dráh na jednu zrážku v PbPb a pp z úlohy 1.1 a 2.3 a vypočítajte $R_{AA}$ \n",
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a27a2457",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+     "dictNColl = {'0-5': 1686.87,\n",
+     "             '5-10': 1319.89,\n",
+     "             '10-30': 741.29,\n",
+     "             '30-50': 246.44,\n",
+     "             'pp':1.\n",
+     "            }\n",
+     "\n",
    ]
   },
   {
