--- a/ALICE_RAA_Vyhodnotenie.ipynb
+++ b/ALICE_RAA_Vyhodnotenie.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "\n",
     "iNumberOfGroups = 4\n",
-    "iNumberOfPt = 4\n",
+    "iNumberOfPt = 5\n",
     "pointsraw = np.zeros((iNumberOfGroups, iNumberOfPt, 4))\n",
     "made_Groups = np.zeros((iNumberOfGroups, iNumberOfPt))\n",
     "legendNames = np.empty((iNumberOfGroups, iNumberOfPt), dtype=object)\n",
@@ -45,7 +45,7 @@
     "colors = []\n",
     "for i in range(4):\n",
     "    row = [] \n",
-    "    for j in range(4):\n",
+    "    for j in range(5):\n",
     "        row.append(plt.cm.tab20(i*4 + j))\n",
     "    colors.append(row)\n",
     "\n",
@@ -67,28 +67,34 @@
     "    # Hier Punkt eintragen\n",
     "    # Syntax: (centrality lower edge, centrality upper edge, RAA, RAA uncertainty, 0=lowPT 1=highPT, group index, group name)\n",
     "\n",
+    "    #4.5 GeV/c\n",
+    "    MakePointForCentAndPt(0., 5., -0.2,0.01 , 0, 0, \"5-6 GeV/c\")\n",
+    "    MakePointForCentAndPt(5., 10., -0.2,0.01, 0, 1, \"5-6 GeV/c\")\n",
+    "    MakePointForCentAndPt(10., 30.,-0.2,0.01 0, 2, \"5-6 GeV/c\")\n",
+    "    MakePointForCentAndPt(30., 50.,-0.2,0.01, 0, 3, \"5-6 GeV/c\")\n",
+    "\n",
     "    #5.5 GeV/c\n",
-    "    MakePointForCentAndPt(0., 5., 0.2,0.01 , 0, 0, \"5-6 GeV/c\")\n",
-    "    MakePointForCentAndPt(5., 10., 0.2,0.01, 0, 1, \"5-6 GeV/c\")\n",
-    "    MakePointForCentAndPt(10., 30.,0.2,0.01 0, 2, \"5-6 GeV/c\")\n",
-    "    MakePointForCentAndPt(30., 50.,0.2,0.01, 0, 3, \"5-6 GeV/c\")\n",
+    "    MakePointForCentAndPt(0., 5., 0.2,0.01 , 1, 0, \"5-6 GeV/c\")\n",
+    "    MakePointForCentAndPt(5., 10., 0.2,0.01, 1, 1, \"5-6 GeV/c\")\n",
+    "    MakePointForCentAndPt(10., 30.,0.2,0.01 1, 2, \"5-6 GeV/c\")\n",
+    "    MakePointForCentAndPt(30., 50.,0.2,0.01, 1, 3, \"5-6 GeV/c\")\n",
     "\n",
     "    #6.5 GeV/c\n",
-    "    MakePointForCentAndPt(0., 5.,0.22,0.01, 1, 0, \"6-7 GeV/c\")\n",
-    "    MakePointForCentAndPt(5., 10., 0.22,0.01, 1, 1, \"6-7 GeV/c\")\n",
-    "    MakePointForCentAndPt(10., 30., 0.22,0.01, 1, 2, \"6-7 GeV/c\")\n",
-    "    MakePointForCentAndPt(30., 50., 0.22,0.01, 1, 3, \"6-7 GeV/c\")\n",
+    "    MakePointForCentAndPt(0., 5.,0.22,0.01, 2, 0, \"6-7 GeV/c\")\n",
+    "    MakePointForCentAndPt(5., 10., 0.22,0.01, 2, 1, \"6-7 GeV/c\")\n",
+    "    MakePointForCentAndPt(10., 30., 0.22,0.01, 2, 2, \"6-7 GeV/c\")\n",
+    "    MakePointForCentAndPt(30., 50., 0.22,0.01, 2, 3, \"6-7 GeV/c\")\n",
     "\n",
     "    #8 GeV/c\n",
-    "    MakePointForCentAndPt(0., 5.,0.24,0.01, 2, 0, \"7-9 GeV/c\") \n",
-    "    MakePointForCentAndPt(5., 10.,0.24,0.01, 2, 1, \"7-9 GeV/c\") \n",
-    "    MakePointForCentAndPt(10., 20.,0.24,0.01, 2, 2, \"7-9 GeV/c\")\n",
-    "    MakePointForCentAndPt(20., 30.,0.24,0.01, 2, 3, \"7-9 GeV/c\")\n",
+    "    MakePointForCentAndPt(0., 5.,0.24,0.01, 3, 0, \"7-9 GeV/c\") \n",
+    "    MakePointForCentAndPt(5., 10.,0.24,0.01, 3, 1, \"7-9 GeV/c\") \n",
+    "    MakePointForCentAndPt(10., 20.,0.24,0.01, 3, 2, \"7-9 GeV/c\")\n",
+    "    MakePointForCentAndPt(20., 30.,0.24,0.01, 3, 3, \"7-9 GeV/c\")\n",
     "\n",
-    "    MakePointForCentAndPt(0., 5.,0.26 ,0.01, 3, 0, \"9-12 GeV/c\")\n",
-    "    MakePointForCentAndPt(5., 10.,0.26 ,0.01  ,3, 1, \"9-12 GeV/c\")\n",
-    "    MakePointForCentAndPt(10., 30.,0.26 ,0.01 , 3, 2, \"9-12 GeV/c\")\n",
-    "    MakePointForCentAndPt(30., 50.,0.26 ,0.01  , 3, 5, \"9-12 GeV/c\")\n",
+    "    MakePointForCentAndPt(0., 5.,0.26 ,0.01, 4, 0, \"9-12 GeV/c\")\n",
+    "    MakePointForCentAndPt(5., 10.,0.26 ,0.01  ,4, 1, \"9-12 GeV/c\")\n",
+    "    MakePointForCentAndPt(10., 30.,0.26 ,0.01 , 4, 2, \"9-12 GeV/c\")\n",
+    "    MakePointForCentAndPt(30., 50.,0.26 ,0.01  , 4, 5, \"9-12 GeV/c\")\n",
     "\n",
     "    DrawTotalPlot(True, drawALICEData)\n",
     "\n",
@@ -139,6 +145,8 @@
     "        plt.errorbar(cent, raa, raa_err, cent_err, marker=\"d\", markersize=markerSize, linewidth=linewidth color=colors[GroupIndex][LowOrHighPt], linestyle=\"\", capsize=1.5)\n",
     "    elif LowOrHighPt == 2:\n",
     "        plt.errorbar(cent, raa, raa_err, cent_err, marker=\"s\", markersize=markerSize, linewidth=linewidth color=colors[GroupIndex][LowOrHighPt], linestyle=\"\", capsize=1.5)\n",
+    "    elif LowOrHighPt == 3:\n",
+    "        plt.errorbar(cent, raa, raa_err, cent_err, marker=\"s\", markersize=markerSize, linewidth=linewidth color=colors[GroupIndex][LowOrHighPt], linestyle=\"\", capsize=1.5)\n",
     "    else:\n",
     "        plt.errorbar(cent, raa, raa_err, cent_err, marker=\"*\", markersize=markerSize, linewidth=linewidth, color=colors[GroupIndex][LowOrHighPt], linestyle=\"\", capsize=1.5)\n",
     "\n",
@@ -153,6 +161,7 @@
     "            DrawSingleGroupAndPt(iNumberOfGroups_Loop, 1)\n",
     "            DrawSingleGroupAndPt(iNumberOfGroups_Loop, 2)\n",
     "            DrawSingleGroupAndPt(iNumberOfGroups_Loop, 3)\n",
+    "            DrawSingleGroupAndPt(iNumberOfGroups_Loop, 4)\n",
     "    plt.plot(-1,-1,linestyle=\"\",marker=\"o\", markersize=markerSize, color=\"gray\", label=r\"$p_{\\rm T}$ = 10 GeV/$c$\")\n",
     "    plt.plot(-1,-1,linestyle=\"\",marker=\"o\", markersize=markerSize, color=\"gray\", mfc=ax.get_facecolor(), label=r\"$p_{\\rm T}$ = 5.5 GeV/$c$\")\n",
     "    handles, labels = ax.get_legend_handles_labels() \n",
