--- a/ALICE_RAA_Vyhodnotenie.ipynb
+++ b/ALICE_RAA_Vyhodnotenie.ipynb
@@ -69,32 +69,32 @@
     "\n",
     "    #4.5 GeV/c\n",
     "    MakePointForCentAndPt(0., 5., -0.2,0.01 , 0, 0, \"4-5 GeV/c\")\n",
-    "    MakePointForCentAndPt(5., 10., -0.2,0.01, 1, 0, \"4-5 GeV/c\")\n",
-    "    MakePointForCentAndPt(10., 30.,-0.2,0.01, 2, 0, \"4-5 GeV/c\")\n",
-    "    MakePointForCentAndPt(30., 50.,-0.2,0.01, 3, 0, \"4-5 GeV/c\")\n",
+    "    MakePointForCentAndPt(5., 10., -0.2,0.01, 0, 1, \"4-5 GeV/c\")\n",
+    "    MakePointForCentAndPt(10., 30.,-0.2,0.01, 0, 2, \"4-5 GeV/c\")\n",
+    "    MakePointForCentAndPt(30., 50.,-0.2,0.01, 0, 3, \"4-5 GeV/c\")\n",
     "\n",
     "    #5.5 GeV/c\n",
-    "    MakePointForCentAndPt(0., 5., 0.2,0.01 , 0, 1, \"5-6 GeV/c\")\n",
+    "    MakePointForCentAndPt(0., 5., 0.2,0.01 , 1, 0, \"5-6 GeV/c\")\n",
     "    MakePointForCentAndPt(5., 10., 0.2,0.01, 1, 1, \"5-6 GeV/c\")\n",
-    "    MakePointForCentAndPt(10., 30.,0.2,0.01, 2, 1, \"5-6 GeV/c\")\n",
-    "    MakePointForCentAndPt(30., 50.,0.2,0.01, 3, 1, \"5-6 GeV/c\")\n",
+    "    MakePointForCentAndPt(10., 30.,0.2,0.01, 1, 2, \"5-6 GeV/c\")\n",
+    "    MakePointForCentAndPt(30., 50.,0.2,0.01, 1, 3, \"5-6 GeV/c\")\n",
     "\n",
     "    #6.5 GeV/c\n",
-    "    MakePointForCentAndPt(0., 5.,0.22,0.01, 0, 2, \"6-7 GeV/c\")\n",
-    "    MakePointForCentAndPt(5., 10., 0.22,0.01, 1, 2, \"6-7 GeV/c\")\n",
+    "    MakePointForCentAndPt(0., 5.,0.22,0.01, 2, 0, \"6-7 GeV/c\")\n",
+    "    MakePointForCentAndPt(5., 10., 0.22,0.01, 2, 1, \"6-7 GeV/c\")\n",
     "    MakePointForCentAndPt(10., 30., 0.22,0.01, 2, 2, \"6-7 GeV/c\")\n",
-    "    MakePointForCentAndPt(30., 50., 0.22,0.01, 3,2, \"6-7 GeV/c\")\n",
+    "    MakePointForCentAndPt(30., 50., 0.22,0.01, 2,3, \"6-7 GeV/c\")\n",
     "\n",
     "    #8 GeV/c\n",
-    "    MakePointForCentAndPt(0., 5.,0.24,0.01, 0, 3, \"7-9 GeV/c\") \n",
-    "    MakePointForCentAndPt(5., 10.,0.24,0.01, 1, 3, \"7-9 GeV/c\") \n",
-    "    MakePointForCentAndPt(10., 20.,0.24,0.01, 2, 3, \"7-9 GeV/c\")\n",
+    "    MakePointForCentAndPt(0., 5.,0.24,0.01, 3, 0, \"7-9 GeV/c\") \n",
+    "    MakePointForCentAndPt(5., 10.,0.24,0.01, 3, 1, \"7-9 GeV/c\") \n",
+    "    MakePointForCentAndPt(10., 20.,0.24,0.01, 3, 2, \"7-9 GeV/c\")\n",
     "    MakePointForCentAndPt(20., 30.,0.24,0.01, 3, 3, \"7-9 GeV/c\")\n",
     "\n",
-    "    MakePointForCentAndPt(0., 5.,0.26 ,0.01, 0, 4, \"9-12 GeV/c\")\n",
-    "    MakePointForCentAndPt(5., 10.,0.26 ,0.01  ,1, 4, \"9-12 GeV/c\")\n",
-    "    MakePointForCentAndPt(10., 30.,0.26 ,0.01 , 2, 4, \"9-12 GeV/c\")\n",
-    "    MakePointForCentAndPt(30., 50.,0.26 ,0.01  , 3, 4, \"9-12 GeV/c\")\n",
+    "    MakePointForCentAndPt(0., 5.,0.26 ,0.01, 4, 0, \"9-12 GeV/c\")\n",
+    "    MakePointForCentAndPt(5., 10.,0.26 ,0.01  ,4, 1, \"9-12 GeV/c\")\n",
+    "    MakePointForCentAndPt(10., 30.,0.26 ,0.01 , 4, 2, \"9-12 GeV/c\")\n",
+    "    MakePointForCentAndPt(30., 50.,0.26 ,0.01  , 4, 3, \"9-12 GeV/c\")\n",
     "\n",
     "    DrawTotalPlot(True, drawALICEData)\n",
     "\n",
@@ -142,11 +142,11 @@
     "    if LowOrHighPt: \n",
     "        plt.errorbar(cent, raa, raa_err, cent_err, marker=\"o\", markersize=markerSize, linewidth=linewidth, color=colors[GroupIndex][LowOrHighPt], capsize=1.5, linestyle=\"\")\n",
     "    elif LowOrHighPt == 1:\n",
-    "        plt.errorbar(cent, raa, raa_err, cent_err, marker=\"d\", markersize=markerSize, linewidth=linewidth color=colors[GroupIndex][LowOrHighPt], linestyle=\"\", capsize=1.5)\n",
+    "        plt.errorbar(cent, raa, raa_err, cent_err, marker=\"d\", markersize=markerSize, linewidth=linewidth, color=colors[GroupIndex][LowOrHighPt], linestyle=\"\", capsize=1.5)\n",
     "    elif LowOrHighPt == 2:\n",
-    "        plt.errorbar(cent, raa, raa_err, cent_err, marker=\"s\", markersize=markerSize, linewidth=linewidth color=colors[GroupIndex][LowOrHighPt], linestyle=\"\", capsize=1.5)\n",
+    "        plt.errorbar(cent, raa, raa_err, cent_err, marker=\"s\", markersize=markerSize, linewidth=linewidth, color=colors[GroupIndex][LowOrHighPt], linestyle=\"\", capsize=1.5)\n",
     "    elif LowOrHighPt == 3:\n",
-    "        plt.errorbar(cent, raa, raa_err, cent_err, marker=\"s\", markersize=markerSize, linewidth=linewidth color=colors[GroupIndex][LowOrHighPt], linestyle=\"\", capsize=1.5)\n",
+    "        plt.errorbar(cent, raa, raa_err, cent_err, marker=\"s\", markersize=markerSize, linewidth=linewidth, color=colors[GroupIndex][LowOrHighPt], linestyle=\"\", capsize=1.5)\n",
     "    else:\n",
     "        plt.errorbar(cent, raa, raa_err, cent_err, marker=\"*\", markersize=markerSize, linewidth=linewidth, color=colors[GroupIndex][LowOrHighPt], linestyle=\"\", capsize=1.5)\n",
     "\n",
